force-app/main/default/objects/ItemPerfomance__c/ItemPerfomance__c.object-meta.xml
<CustomObject>
    <label>Item de performance</label>
    <nameField>
        <displayFormat>IP-{0000}</displayFormat>
        <label>Nome de item de perfomance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens de performance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>