force-app/main/default/objects/ItemPerfomance__c/fields/AltitudeAte__c.field-meta.xml
<CustomField>
    <fullName>AltitudeAte__c</fullName>
    <label>Altitude até</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>