force-app/main/default/objects/ItemPerfomance__c/fields/AltitudeDe__c.field-meta.xml
<CustomField>
    <fullName>AltitudeDe__c</fullName>
    <label>Altitude de</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>