force-app/main/default/objects/ItemPerfomance__c/fields/CategoriaDecolagem__c.field-meta.xml
<CustomField>
    <fullName>CategoriaDecolagem__c</fullName>
    <formula>TEXT(Perfomance__r.CategoriaDecolagem__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categoria da decolagem</label>
    <type>Text</type>
</CustomField>