force-app/main/default/objects/ItemPerfomance__c/fields/ModeloAeronave__c.field-meta.xml
<CustomField>
    <fullName>ModeloAeronave__c</fullName>
    <formula>CASESAFEID(Perfomance__r.ModeloAeronave__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modelo da aeronave</label>
    <type>Text</type>
</CustomField>