force-app/main/default/objects/ItemPerfomance__c/fields/Perfomance__c.field-meta.xml
<CustomField>
    <fullName>Perfomance__c</fullName>
    <label>Perfomance</label>
    <referenceTo>Perfomance__c</referenceTo>
    <relationshipLabel>Itens de perfomance</relationshipLabel>
    <relationshipName>ItensPerfomance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>