force-app/main/default/objects/ItemPerfomance__c/fields/PesoMaximo__c.field-meta.xml
<CustomField>
    <fullName>PesoMaximo__c</fullName>
    <label>Peso máximo decolagem</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>