force-app/main/default/objects/ItemPerfomance__c/fields/TemperaturaAte__c.field-meta.xml
<CustomField>
    <fullName>TemperaturaAte__c</fullName>
    <label>Temperatura até</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>