force-app/main/default/objects/ItemPerfomance__c/fields/TemperaturaDe__c.field-meta.xml
<CustomField>
    <fullName>TemperaturaDe__c</fullName>
    <label>Temperatura de</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>