force-app/main/default/objects/ItemPerfomance__c/fields/VelocidadeventoAte__c.field-meta.xml
<CustomField>
    <fullName>VelocidadeventoAte__c</fullName>
    <label>Velocidade do vento - até</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>