force-app/main/default/objects/ItemPerfomance__c/fields/VelocidadeVentoDe__c.field-meta.xml
<CustomField>
    <fullName>VelocidadeVentoDe__c</fullName>
    <label>Velocidade do vento - de</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>